<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/challenge_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:text="@string/hello_world"/>

    <Button
        android:id="@+id/challenge_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:text="@string/sum_of_two_numbers"/>

    <Button
        android:id="@+id/challenge_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:text="@string/current_day_text"/>

    <Button
        android:id="@+id/challenge_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:text="@string/random_color_text"/>

    <Button
        android:id="@+id/challenge_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/challenge_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="40dp"
        android:text="@string/print_list_text"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="173dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/challenge_five"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        app:srcCompat="@drawable/dice" />

    <Button
        android:id="@+id/challenge_six"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_margin="40dp"
        android:layout_marginTop="20dp"
        android:drawableTop="@drawable/dice"
        android:padding="20dp"
        android:text="@string/favorite_number_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_five" />

</androidx.constraintlayout.widget.ConstraintLayout>